--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
     <div class="calculator-history">
         <p class="history-title">Last Calculation<button class="history-btn">Clear history</button></p>
+        <hr class="hr-line">
         <ul class="history">
             
         </ul>
