--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="calculator">
         <div class="display">
             <div class="previousNumber">
-                <p>12323</p>
-                <span class="mathSign">+</span>
+                <p></p>
+                <span class="mathSign"></span>
             </div>
-            <p class="currentNumber">234353</p>
+            <p class="currentNumber"></p>
         </div>
     
     <div class="panel">
